--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <tr> 
             <label>EN CUENTA: 💸</label> <input type="number" id="resultado" class="resultado" disabled><br><br> 
         </tr>
+            <button onClick="window.location.reload();">Limpiar Tabla</button>
         </table>
         <table class="default" border="px">
 
